# windesktopmgr

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Migrate-WinDesktopMgr.ps1  README.md  Run-DiagnosticWrapper.ps1  Setup-DiagSchedule.ps1  SystemHealthDiag.ps1  SystemHealthDiag.py  alerts.py  applogging.py  architecture.html  baseline.py  bios_audit.py  bios_cache.json  bsod_code_cache.json  dev.py  diag_email_config.xml  disk.py  event_id_cache.json  git-cheatsheet.html  gitignore  homenet.py  index.html  metrics_history.py  nlq.py  post_update_check.py  process_cache.json  pyproject.toml  remediation.py  requirements-dev.txt  requirements.txt  services_item_cache.json  setup-startup.ps1  start-windesktopmgr.bat  startup_item_cache.json  task_watcher.py  tray.py  windesktopmgr.py  (+1 more)
.claude/: settings.json
System Health Reports/: SystemHealthReport_2026-03-04_20-56-22.html  SystemHealthReport_2026-03-07_17-10-46.html  SystemHealthReport_2026-03-07_23-32-16.html  SystemHealthReport_2026-03-08_09-58-17.html  SystemHealthReport_2026-03-08_10-35-16.html  SystemHealthReport_2026-03-09_07-00-01.html  SystemHealthReport_2026-03-10_07-23-27.html  SystemHealthReport_2026-03-11_07-33-39.html  SystemHealthReport_2026-03-12_21-03-58.html  SystemHealthReport_2026-03-12_21-07-42.html  SystemHealthReport_2026-03-13_08-28-08.html  SystemHealthReport_2026-03-14_07-58-05.html  SystemHealthReport_2026-03-15_07-00-01.html  SystemHealthReport_2026-03-15_10-41-29.html  SystemHealthReport_2026-03-16_07-43-10.html  SystemHealthReport_2026-03-16_12-46-09.html  SystemHealthReport_2026-03-17_19-46-12.html
docs/: powershell_audit.md
scripts/: audit_ps_sites.py  build_favicon.py  lint_setinterval.py  post_restart_check.py
templates/: index.html
tests/: capture_fixtures.py  conftest.py  test_alerts.py  test_architecture_html.py  test_baseline.py  test_bios_audit.py  test_bsod_parsing.py  test_cache_systems.py  test_e2e_smoke.py  test_gpu.py  test_headless.py  test_homenet.py  test_integration.py  test_logging.py  test_metrics_history.py  test_network_metrics.py  test_nlq.py  test_playwright_smoke.py  test_post_update_check.py  test_powershell.py  test_pure_functions.py  test_remediation.py  test_routes.py  test_snapshots.py  test_summarizers.py  test_system_health_diag.py  test_task_watcher.py  test_tray.py
tests/fixtures/parsed/: parsed_get_credentials_network_health.json  parsed_get_current_bios.json  parsed_get_disk_health.json  parsed_get_driver_health.json  parsed_get_installed_drivers.json  parsed_get_memory_analysis.json  parsed_get_network_data.json  parsed_get_process_list.json  parsed_get_services_list.json  parsed_get_startup_items.json  parsed_get_system_timeline.json  parsed_get_thermals.json  parsed_get_update_history.json
tests/fixtures/powershell/: ps_bios.json  ps_credentials.json  ps_disk_health.json  ps_disk_io.json  ps_driver_health.json  ps_installed_drivers.json  ps_memory_analysis.json  ps_network_adapters.json  ps_network_conns.json  ps_process_list.json  ps_services_list.json  ps_startup_items.json  ps_thermals.json  ps_timeline.json  ps_update_history.json
windesktopmgr/: SystemHealthDiag.py
